# mini-gpt

./: .gitignore  README.md  eval_llm.py  pyproject.toml
dataset/: __init__.py  clean_utf8.py  lm_dataset.py
model/: __init__.py  model_lora.py  model_minigpt.py
trainer/: train_dpo.py  train_grpo.py  train_lora.py  train_pretrain.py  train_reason.py  train_sft.py  utils.py
