[project]
name = "mini-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.0",
    "einops>=0.8.2",
    "numpy>=2.4.2",
    "sentencepiece>=0.2.1",
    "swanlab>=0.7.8",
    "torch>=2.10.0",
    "transformers==4.57.1",
]
